--- a/styles.css
+++ b/styles.css
@@ -70,17 +70,8 @@
             opacity:0;
         }
 
-        .scaleUpClass{
-            animation: scaleUp 1s ease;
-        }
-
-        .scaleDownClass{
-            animation: scaleDown .5s ease;
-        }
-
-        .spinInClass{
-            transform: scale(0) rotate(0deg);
-            animation: spinIn 1s ease forwards;
+        .image{
+            transform: scale(0);
         }
 
         @keyframes spinIn {
@@ -107,10 +98,6 @@
                 transform: translateY(-50%) scale(0);
             }
 
-            97% {
-                transform: translateY(-50%) scale(1.1);
-            }
-
             100% {
                 transform: translateY(-50%) scale(1);
             }
@@ -119,10 +106,6 @@
         @keyframes scaleDown {
             0% {
                 transform: translateY(-50%) scale(1);
-            }
-
-            1% {
-                transform: translateY(-50%) scale(1.1);
             }
 
             30% {
