--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
             background-color: #a4dceb;
             background-image: url('images/fabficbkgd.png');
             color: black;
+            overflow: hidden;
         }
 
         #container {
@@ -23,18 +24,15 @@
             height: calc(100vh - constant(safe-area-inset-top) - constant(safe-area-inset-bottom));
             /* height: var(--app-height); */
         }
-        header{
-            opacity:0;
-            transition: opacity .5s;
-        }
+    
         h1 {
+            transform: scale(.3);
             margin: 0;
             padding: 0;
             font-family: 'Leckerli One', cursive;
             font-size: 3em;
             font-weight: normal;
             text-shadow: 2px 2px 4px gray;
-            /* opacity:.5; */
             mix-blend-mode: overlay;
         }
 
@@ -42,93 +40,15 @@
             display: grid;
             place-items: center;
             position: relative;
-            /* top: -3%; */
         }
 
         #image {
-            animation-name: spinIn;
-            animation-duration: 1s;
-            animation-timing-function: ease;
-            animation-fill-mode: forwards;
-            /* animation-delay: .5s; */
-            /* transition: opacity 1s; */
+            position:relative;
+            left:40vw;
+            transform: scale(0);
         }
 
         #banner {
             position: absolute;
-            top: 50%;
-            transform: translateY(-50%) scale(0);
-            animation-name: scaleUp;
-            animation-duration: .25s;
-            animation-timing-function: ease;
-            animation-fill-mode: forwards;
-            animation-delay: .75s;
-            transition: opacity 1s;
-        }
-
-        .fadeIn{
-            opacity:1;
-        }
-        .fadeOut{
-            opacity:0;
-        }
-
-        .image{
             transform: scale(0);
-        }
-
-        @keyframes spinIn {
-            from {
-                transform: scale(0) rotate(0deg);
-            }
-
-            to {
-                transform: scale(1) rotate(180deg);
-            }
-        }
-        @keyframes spinOut {
-            from {
-                transform: scale(1) rotate(180deg);
-            }
-
-            to {
-                transform: scale(0) rotate(0deg);
-            }
-        }
-
-        @keyframes scaleUp {
-            0% {
-                transform: translateY(-50%) scale(0);
-            }
-
-            100% {
-                transform: translateY(-50%) scale(1);
-            }
-        }
-
-        @keyframes scaleDown {
-            0% {
-                transform: translateY(-50%) scale(1);
-            }
-
-            30% {
-                transform: translateY(-50%) scale(0);
-            }
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-        @keyframes fadeOut {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
         }
